--- a/pages/project.html
+++ b/pages/project.html
@@ -1,19 +1,45 @@
 <!doctype html>
 <html lang="en">
-     <head>
+    <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast</title>
+        <title>
+            VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast
+        </title>
         <link rel="stylesheet" href="../css/styles.css" />
-         <link rel="stylesheet" href="../css/project.css"/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-        <link rel="icon" href="../images/favicon-16x16.png" sizes="16x16" type="image/png" />
-        <link rel="icon" href="../images/favicon-16x16.png" sizes="32x32" type="image/png" />
-        <link rel="icon" href="../images/favicon-32x32.png" sizes="48x48" type="image/png" />
+        <link rel="stylesheet" href="../css/project.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        />
+        <link
+            rel="icon"
+            href="../images/favicon-16x16.png"
+            sizes="16x16"
+            type="image/png"
+        />
+        <link
+            rel="icon"
+            href="../images/favicon-16x16.png"
+            sizes="32x32"
+            type="image/png"
+        />
+        <link
+            rel="icon"
+            href="../images/favicon-32x32.png"
+            sizes="48x48"
+            type="image/png"
+        />
         <link rel="apple-touch-icon" href="../images/apple-touch-icon.png" />
         <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
-        <link rel="android-chrome-icon" href="../images/android-chrome-192x192.png" />
-        <link rel="android-chrome-icon" href="../images/android-chrome-512x512.png" />
+        <link
+            rel="android-chrome-icon"
+            href="../images/android-chrome-192x192.png"
+        />
+        <link
+            rel="android-chrome-icon"
+            href="../images/android-chrome-512x512.png"
+        />
     </head>
     <body>
         <header>
@@ -21,30 +47,39 @@
                 <div class="logo">
                     <a href="../index.html">
                         <!-- Light Mode Logo -->
-                        <img src="../images/light-logo.png" alt="VAZID Logo Light" class="logo-light" />
+                        <img
+                            src="../images/light-logo.png"
+                            alt="VAZID Logo Light"
+                            class="logo-light"
+                        />
                         <!-- Dark Mode Logo -->
-                        <img src="../images/dark-logo.png" alt="VAZID Logo Dark" class="logo-dark" />
+                        <img
+                            src="../images/dark-logo.png"
+                            alt="VAZID Logo Dark"
+                            class="logo-dark"
+                        />
                     </a>
                 </div>
                 <ul class="nav-links">
                     <li>
-                        <a href="project.html">MY CURRENT <strong>PROJECTS</strong></a>
+                        <a href="project.html">CURRENT PROJECTS</a>
                     </li>
-                    <li><a href="../pages/contact.html">CONNECT WITH ME</a></li>
-                      <li class="dropdown">
-                        <a href="#" class="dropbtn">CHECK MY <strong>BLOGS</strong></a>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">BLOGS</a>
                         <div class="dropdown-content">
                             <a href="#">Linux</a>
-                            <a href="#">Infra</a>
                             <a href="#">DevOps</a>
                             <a href="#">Monitoring</a>
                             <a href="#">Cloud</a>
+                            <a href="#">MLOps</a>
                             <a href="#">Data science</a>
                         </div>
                     </li>
                     <li>
-                        <a href="../pages/soon.html">TAKE <strong>QUIZ</strong></a>
+                        <a href="../pages/soon.html">QUIZ</a>
                     </li>
+                    <li><a href="contact.html">CONTACT ME</a></li>
                 </ul>
                 <button id="dark-mode-toggle" class="dark-mode-toggle">
                     <i class="fas fa-sun"></i>
@@ -55,66 +90,88 @@
         </header>
 
         <section class="content">
-          
-    <main class="project-container">
-        <h1 class="page-title">Current Projects</h1>
-        <div class="project-list">
-            <div class="project">
-                <h2 class="project-name">Moosam - Your Clean Weather Companion</h2>
-                <span class="status launched">LAUNCHED</span>
-                <a href="https://moosam.site/" class="project-link">Visit Project <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="project">
-                <h2 class="project-name">Quote App Project</h2>
-                <span class="status coming-soon">COMING SOON</span>
-                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="project">
-                <h2 class="project-name">Journey</h2>
-                <span class="status coming-soon">COMING SOON</span>
-                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="project">
-                <h2 class="project-name">Personal Dashboard Web App</h2>
-                <span class="status coming-soon">COMING SOON</span>
-                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="project">
-                <h2 class="project-name">Select Advertisements</h2>
-                <span class="status coming-soon">COMING SOON</span>
-                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="project">
-                <h2 class="project-name">Petition to Bring Back</h2>
-                <span class="status coming-soon">COMING SOON</span>
-                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="project">
-                <h2 class="project-name">District Lab</h2>
-                <span class="status in-progress">IN PROGRESS</span>
-                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="project">
-                <h2 class="project-name">Daily System Update</h2>
-                <span class="status coming-soon">COMING SOON</span>
-                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="project">
-                <h2 class="project-name">Advertisement Agency</h2>
-                <span class="status in-progress">IN PROGRESS</span>
-                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
-            </div>
-        </div>
-    </main>
-
+            <main class="project-container">
+                <h1 class="page-title">Current Projects</h1>
+                <div class="project-list">
+                    <div class="project">
+                        <h2 class="project-name">
+                            Moosam - Your Clean Weather Companion
+                        </h2>
+                        <span class="status launched">LAUNCHED</span>
+                        <a href="https://moosam.site/" class="project-link"
+                            >Visit Project <i class="fas fa-arrow-right"></i
+                        ></a>
+                    </div>
+                    <div class="project">
+                        <h2 class="project-name">Quote App Project</h2>
+                        <span class="status coming-soon">COMING SOON</span>
+                        <a href="#" class="project-link"
+                            >Learn More <i class="fas fa-arrow-right"></i
+                        ></a>
+                    </div>
+                    <div class="project">
+                        <h2 class="project-name">Journey</h2>
+                        <span class="status coming-soon">COMING SOON</span>
+                        <a href="#" class="project-link"
+                            >Learn More <i class="fas fa-arrow-right"></i
+                        ></a>
+                    </div>
+                    <div class="project">
+                        <h2 class="project-name">Personal Dashboard Web App</h2>
+                        <span class="status coming-soon">COMING SOON</span>
+                        <a href="#" class="project-link"
+                            >Learn More <i class="fas fa-arrow-right"></i
+                        ></a>
+                    </div>
+                    <div class="project">
+                        <h2 class="project-name">Select Advertisements</h2>
+                        <span class="status coming-soon">COMING SOON</span>
+                        <a href="#" class="project-link"
+                            >Learn More <i class="fas fa-arrow-right"></i
+                        ></a>
+                    </div>
+                    <div class="project">
+                        <h2 class="project-name">Petition to Bring Back</h2>
+                        <span class="status coming-soon">COMING SOON</span>
+                        <a href="#" class="project-link"
+                            >Learn More <i class="fas fa-arrow-right"></i
+                        ></a>
+                    </div>
+                    <div class="project">
+                        <h2 class="project-name">District Lab</h2>
+                        <span class="status in-progress">IN PROGRESS</span>
+                        <a href="#" class="project-link"
+                            >Learn More <i class="fas fa-arrow-right"></i
+                        ></a>
+                    </div>
+                    <div class="project">
+                        <h2 class="project-name">Daily System Update</h2>
+                        <span class="status coming-soon">COMING SOON</span>
+                        <a href="#" class="project-link"
+                            >Learn More <i class="fas fa-arrow-right"></i
+                        ></a>
+                    </div>
+                    <div class="project">
+                        <h2 class="project-name">Advertisement Agency</h2>
+                        <span class="status in-progress">IN PROGRESS</span>
+                        <a href="#" class="project-link"
+                            >Learn More <i class="fas fa-arrow-right"></i
+                        ></a>
+                    </div>
+                </div>
+            </main>
         </section>
 
         <footer>
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About VAZID</h3>
-                    <p><b>VAZID</b> is a Freelance DevOps engineer,<br> Web developer,<br> Web designer,<br> and data engineer.</p>
-
+                    <p>
+                        <b>VAZID</b> is a Freelance DevOps engineer,<br />
+                        Web developer,<br />
+                        Web designer,<br />
+                        and data engineer.
+                    </p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
@@ -144,7 +201,7 @@
             </div>
         </footer>
 
-          <script>
+        <script>
             function toggleMenu() {
                 var x = document.querySelector(".nav-links");
                 if (x.style.display === "flex") {
