--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -15,31 +15,32 @@
                 </div>
                 <ul class="nav-links">
                     <li>
-                        <a href="pages/project.html">MY CURRENT <strong>PROJECT</strong></a>
+                        <a href="pages/project.html">CURRENT PROJECT</a>
                     </li>
-                    <li><a href="pages/aboutme.html">CONNECT ME</a></li>
+
                     <li class="dropdown">
-                        <button class="dropbtn">CHECK MY <strong>BLOGS</strong></button>
+                        <button class="dropbtn">BLOGS</button>
                         <div class="dropdown-content">
                             <a href="#">Linux</a>
-                            <a href="#">Infra</a>
                             <a href="#">DevOps</a>
                             <a href="#">Monitoring</a>
                             <a href="#">Cloud</a>
+                            <a href="#">MLOps</a>
                             <a href="#">Data science</a>
                         </div>
                     </li>
                     <li>
-                        <a href="../pages/soon.html">TAKE <strong>QUIZ</strong></a>
+                        <a href="../pages/soon.html">QUIZ</a>
                     </li>
+                    <li><a href="pages/aboutme.html">CONNECT ME</a></li>
                 </ul>
                 <div class="icon" onclick="toggleMenu()">☰</div>
             </nav>
         </header>
         <section class="content">
             <p>
-                Quizzes can be an effective tool for programmer to test their knowledge and reinforce what they have
-                learned.
+                Quizzes can be an effective tool for programmer to test their
+                knowledge and reinforce what they have learned.
             </p>
 
             <div class="card-container">
@@ -76,7 +77,10 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About VAZID</h3>
-                    <p>VAZID is a Freelance DevOps engineer, Web developer, Web designer, and data engineer.</p>
+                    <p>
+                        VAZID is a Freelance DevOps engineer, Web developer, Web
+                        designer, and data engineer.
+                    </p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
