--- a/pages/soon.html
+++ b/pages/soon.html
@@ -3,17 +3,43 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast</title>
+        <title>
+            VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast
+        </title>
         <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/quiz.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-        <link rel="icon" href="../images/favicon-16x16.png" sizes="16x16" type="image/png" />
-        <link rel="icon" href="../images/favicon-16x16.png" sizes="32x32" type="image/png" />
-        <link rel="icon" href="../images/favicon-32x32.png" sizes="48x48" type="image/png" />
+        <link rel="stylesheet" href="../css/quiz.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        />
+        <link
+            rel="icon"
+            href="../images/favicon-16x16.png"
+            sizes="16x16"
+            type="image/png"
+        />
+        <link
+            rel="icon"
+            href="../images/favicon-16x16.png"
+            sizes="32x32"
+            type="image/png"
+        />
+        <link
+            rel="icon"
+            href="../images/favicon-32x32.png"
+            sizes="48x48"
+            type="image/png"
+        />
         <link rel="apple-touch-icon" href="../images/apple-touch-icon.png" />
         <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
-        <link rel="android-chrome-icon" href="../images/android-chrome-192x192.png" />
-        <link rel="android-chrome-icon" href="../images/android-chrome-512x512.png" />
+        <link
+            rel="android-chrome-icon"
+            href="../images/android-chrome-192x192.png"
+        />
+        <link
+            rel="android-chrome-icon"
+            href="../images/android-chrome-512x512.png"
+        />
     </head>
     <body>
         <header>
@@ -21,30 +47,39 @@
                 <div class="logo">
                     <a href="../index.html">
                         <!-- Light Mode Logo -->
-                        <img src="../images/light-logo.png" alt="VAZID Logo Light" class="logo-light" />
+                        <img
+                            src="../images/light-logo.png"
+                            alt="VAZID Logo Light"
+                            class="logo-light"
+                        />
                         <!-- Dark Mode Logo -->
-                        <img src="../images/dark-logo.png" alt="VAZID Logo Dark" class="logo-dark" />
+                        <img
+                            src="../images/dark-logo.png"
+                            alt="VAZID Logo Dark"
+                            class="logo-dark"
+                        />
                     </a>
                 </div>
                 <ul class="nav-links">
                     <li>
-                        <a href="../pages/project.html">MY CURRENT <strong>PROJECTS</strong></a>
+                        <a href="../pages/project.html">CURRENT PROJECTS</a>
                     </li>
-                    <li><a href="../pages/contact.html">CONNECT WITH ME</a></li>
-                     <li class="dropdown">
-                        <a href="#" class="dropbtn">CHECK MY <strong>BLOGS</strong></a>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">BLOGS</a>
                         <div class="dropdown-content">
                             <a href="#">Linux</a>
-                            <a href="#">Infra</a>
                             <a href="#">DevOps</a>
                             <a href="#">Monitoring</a>
                             <a href="#">Cloud</a>
+                            <a href="#">MLOps</a>
                             <a href="#">Data science</a>
                         </div>
                     </li>
                     <li>
-                        <a href="soon.html">TAKE <strong>QUIZ</strong></a>
+                        <a href="soon.html">QUIZ</a>
                     </li>
+                    <li><a href="../pages/contact.html">CONTACT ME</a></li>
                 </ul>
                 <button id="dark-mode-toggle" class="dark-mode-toggle">
                     <i class="fas fa-sun"></i>
@@ -64,7 +99,10 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About VAZID</h3>
-                    <p>VAZID is a Freelance DevOps engineer, Web developer, Web designer, and data engineer.</p>
+                    <p>
+                        VAZID is a Freelance DevOps engineer, Web developer, Web
+                        designer, and data engineer.
+                    </p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
