Update css: Add hover in key skill in Hero section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
                     <p class="intro">
                         With over 6 years of experience, I specialize in
                         designing and implementing robust, scalable cloud
-                        architectures across GCP, AWS, and Azure platforms. I'm
+                        architectures across
+                        <strong>GCP, AWS, and Azure platforms</strong>. I'm
                         passionate about optimizing workflows, automating
                         processes, and delivering high-performance solutions.
                     </p>
