Upates: added about page, update css

--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
                         </div>
                     </li>
                     <li>
-                        <a href="pages/soon.html">QUIZ</a>
+                        <a href="pages/quiz.html">QUIZ</a>
                     </li>
                     <li><a href="pages/contact.html">CONTACT ME</a></li>
+                    <li><a href="pages/about.html">ABOUT ME</a></li>
                 </ul>
                 <button id="dark-mode-toggle" class="dark-mode-toggle">
                     <i class="fas fa-sun"></i>
