--- a/pages/about.html
+++ b/pages/about.html
@@ -1,8 +1,259 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>About Sheikh Vazid Ahmed</title>
+        <link rel="stylesheet" href="../css/styles.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        />
+        <link
+            rel="icon"
+            href="images/favicon-16x16.png"
+            sizes="16x16"
+            type="image/png"
+        />
+        <link
+            rel="icon"
+            href="images/favicon-16x16.png"
+            sizes="32x32"
+            type="image/png"
+        />
+        <link
+            rel="icon"
+            href="images/favicon-32x32.png"
+            sizes="48x48"
+            type="image/png"
+        />
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+        <link
+            rel="android-chrome-icon"
+            href="images/android-chrome-192x192.png"
+        />
+        <link
+            rel="android-chrome-icon"
+            href="images/android-chrome-512x512.png"
+        />
     </head>
-    <body></body>
+    <body>
+        <header>
+            <nav>
+                <div class="logo">
+                    <a href="../index.html">
+                        <!-- Light Mode Logo -->
+                        <img
+                            src="../images/light-logo.png"
+                            alt="VAZID Logo Light"
+                            class="logo-light"
+                        />
+                        <!-- Dark Mode Logo -->
+                        <img
+                            src="../images/dark-logo.png"
+                            alt="VAZID Logo Dark"
+                            class="logo-dark"
+                        />
+                    </a>
+                </div>
+                <ul class="nav-links">
+                    <li>
+                        <a href="../pages/project.html">CURRENT PROJECTS</a>
+                    </li>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn">BLOGS</a>
+                        <div class="dropdown-content">
+                            <a href="#">Linux</a>
+                            <a href="#">DevOps</a>
+                            <a href="#">Monitoring</a>
+                            <a href="#">MLOps</a>
+                            <a href="#">Data science</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="../pages/quiz.html">QUIZ</a>
+                    </li>
+                    <li><a href="../pages/contact.html">CONTACT ME</a></li>
+                    <li><a href="../pages/about.html">ABOUT ME</a></li>
+                </ul>
+                <button id="dark-mode-toggle" class="dark-mode-toggle">
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
+                </button>
+                <div class="icon" onclick="toggleMenu()">☰</div>
+            </nav>
+        </header>
+
+        <main class="about-me-body">
+            <h1>About me</h1>
+
+            <section class="section">
+                <div class="blue-bar">
+                    <h2>My Name Sheikh Vazid Ahmed</h2>
+                </div>
+                <p>
+                    I'm a DevOps Engineer and Cloud Solution Architect with over
+                    6 years of experience working across AWS, Azure, and Google
+                    Cloud Platform (GCP). What really excites me is building and
+                    optimizing cloud infrastructure that's not just scalable but
+                    also cost-effective. From setting up CI/CD pipelines to
+                    automating infrastructure with tools like Terraform and
+                    Ansible, I love making things run smoothly in the cloud!
+                </p>
+            </section>
+
+            <div class="blue-bar">
+                <h2>My Journey So Far</h2>
+            </div>
+
+            <section class="section">
+                <p>
+                    Over the years, I've had the chance to work with amazing
+                    companies like Accenture, Deloitte, and Tensult, where I led
+                    some pretty cool projects:
+                </p>
+                <ul>
+                    <li>
+                        Boosting data pipeline efficiency by 30% with
+                        automation.
+                    </li>
+                    <li>
+                        Migrating Kubernetes clusters across GCP, AWS, and Azure
+                        to make systems more scalable and cost-effective.
+                    </li>
+                    <li>
+                        Bringing DevSecOps practices to life, ensuring that
+                        every step of the cloud journey is secure and efficient.
+                    </li>
+                </ul>
+                <p>
+                    I'm also multi-cloud certified with credentials from AWS,
+                    Azure, and Google Cloud, so I know my way around the cloud
+                    pretty well!
+                </p>
+            </section>
+
+            <div class="blue-bar">
+                <h2>Creativity Meets Tech</h2>
+            </div>
+
+            <section class="section">
+                <p>
+                    Outside of DevOps, I love getting creative with web design
+                    and development. Whether it's building a sleek website or
+                    designing posters and book covers, I enjoy tapping into my
+                    creative side. It's all about finding the perfect balance
+                    between aesthetics and functionality!
+                </p>
+            </section>
+
+            <div class="blue-bar">
+                <h2>Teaching & Future Plans</h2>
+            </div>
+
+            <section class="section">
+                <p>
+                    One of my big dreams is to start teaching and mentoring
+                    future cloud and DevOps professionals. I'm also excited
+                    about hosting tech events focusing on DevOps, MLOps, and
+                    Cloud—creating a space where people can share, learn, and
+                    innovate together.
+                </p>
+            </section>
+
+            <div class="blue-bar">
+                <h2>When I'm Not in Front of a Screen...</h2>
+            </div>
+
+            <section class="section">
+                <p>
+                    I'm probably out exploring! I love spending time new
+                    historic place and going for a good run to clear my head.
+                    Whether it's a challenging hike or solving a tricky cloud
+                    problem, I'm always up for a new adventure.
+                </p>
+            </section>
+
+            <section class="section">
+                <h1>Let's Connect!</h1>
+                <p>
+                    If you're looking to collaborate on a project, or just want
+                    to chat about all things cloud and DevOps, feel free to get
+                    in touch! I'm always open to new ideas and love connecting
+                    with like-minded people.
+                </p>
+                <center>
+                    <p>📧 Email: sheikh.vazid.ahmed@gmail.com</p>
+                    <a href="#" class="hire-me">Hire me</a>
+                </center>
+            </section>
+
+            <section>
+                <h1>Social accounts</h1>
+                <div class="social-links">
+                    <a href="#" class="social-link">LinkedIn</a>
+                    <a href="#" class="social-link">GitHub</a>
+                    <a href="#" class="social-link">Behance</a>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>About</h3>
+                    <p>
+                        <b>Sheikh Vazid Ahmed</b> is a versatile DevOps Engineer
+                        and Cloud Solution Architect with over 6+ years of
+                        experience in designing and implementing robust,
+                        scalable cloud architectures across GCP, AWS, and Azure
+                        platforms.
+                    </p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Articles</a></li>
+                        <li><a href="#">Categories</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact Us</h3>
+                    <p>Email: sheikh.vazid.ahmed@gmail.com</p>
+                    <p>Current Location: Mangalore, Karnataka</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="social-icons">
+                    <a href="#" aria-label="Facebook"></a>
+                    <a href="#" aria-label="Twitter"></a>
+                    <a href="#" aria-label="Instagram"></a>
+                    <a href="#" aria-label="LinkedIn"></a>
+                </div>
+                <p>© 2024 VAZID. All rights reserved.</p>
+                <p>Designed by VAZID</p>
+            </div>
+        </footer>
+
+        <script>
+            function toggleMenu() {
+                var x = document.querySelector(".nav-links");
+                if (x.style.display === "flex") {
+                    x.style.display = "none";
+                } else {
+                    x.style.display = "flex";
+                }
+            }
+
+            const darkModeToggle = document.getElementById("dark-mode-toggle");
+            darkModeToggle.addEventListener("click", () => {
+                document.body.classList.toggle("dark-mode");
+                darkModeToggle.classList.toggle("dark-mode");
+            });
+        </script>
+    </body>
 </html>
