--- a/pages/project.html
+++ b/pages/project.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>
-            VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast
-        </title>
+        <title>VAZID - Project</title>
         <link rel="stylesheet" href="../css/styles.css" />
         <link rel="stylesheet" href="../css/project.css" />
         <link
@@ -62,7 +60,7 @@
                 </div>
                 <ul class="nav-links">
                     <li>
-                        <a href="project.html">CURRENT PROJECTS</a>
+                        <a href="../pages/project.html">CURRENT PROJECTS</a>
                     </li>
 
                     <li class="dropdown">
@@ -77,9 +75,10 @@
                         </div>
                     </li>
                     <li>
-                        <a href="../pages/soon.html">QUIZ</a>
+                        <a href="../pages/quiz.html">QUIZ</a>
                     </li>
-                    <li><a href="contact.html">CONTACT ME</a></li>
+                    <li><a href="../pages/contact.html">CONTACT ME</a></li>
+                    <li><a href="../pages/about.html">ABOUT ME</a></li>
                 </ul>
                 <button id="dark-mode-toggle" class="dark-mode-toggle">
                     <i class="fas fa-sun"></i>
