--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -3,15 +3,88 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>VAZID</title>
+        <title>VAZID - Quiz</title>
         <link rel="stylesheet" href="../css/styles.css" />
         <link rel="stylesheet" href="../css/quiz.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        />
+        <link
+            rel="icon"
+            href="images/favicon-16x16.png"
+            sizes="16x16"
+            type="image/png"
+        />
+        <link
+            rel="icon"
+            href="images/favicon-16x16.png"
+            sizes="32x32"
+            type="image/png"
+        />
+        <link
+            rel="icon"
+            href="images/favicon-32x32.png"
+            sizes="48x48"
+            type="image/png"
+        />
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+        <link
+            rel="android-chrome-icon"
+            href="images/android-chrome-192x192.png"
+        />
+        <link
+            rel="android-chrome-icon"
+            href="images/android-chrome-512x512.png"
+        />
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "Person",
+                "name": "Sheikh Vazid Ahmed",
+                "jobTitle": "DevOps Engineer, MLOps & Cloud Solution Architect",
+                "url": "https://vazid.site",
+                "sameAs": [
+                    "https://www.linkedin.com/in/vazid",
+                    "https://github.com/sudovazid"
+                ],
+                "description": "DevOps Engineer, MLOps & Cloud Solution Architect with expertise in Cloud Architecture, DevOps, and Data Science",
+                "knowsAbout": [
+                    "Cloud Architecture",
+                    "DevOps",
+                    "Infrastructure as Code",
+                    "Containerization",
+                    "CI/CD",
+                    "Data Engineer",
+                    "MlOps",
+                    "Data science"
+                ],
+                "memberOf": {
+                    "@type": "Organization",
+                    "name": "**Sheikh Vazid**" // Replace with the company name
+                }
+            }
+        </script>
     </head>
     <body>
         <header>
             <nav>
                 <div class="logo">
-                    <a href="../index.html"><strong>VAZID</strong></a>
+                    <a href="index.html">
+                        <!-- Light Mode Logo -->
+                        <img
+                            src="../images/light-logo.png"
+                            alt="VAZID Logo Light"
+                            class="logo-light"
+                        />
+                        <!-- Dark Mode Logo -->
+                        <img
+                            src="../images/dark-logo.png"
+                            alt="VAZID Logo Dark"
+                            class="logo-dark"
+                        />
+                    </a>
                 </div>
                 <ul class="nav-links">
                     <li>
@@ -30,10 +103,15 @@
                         </div>
                     </li>
                     <li>
-                        <a href="../pages/soon.html">QUIZ</a>
+                        <a href="../pages/quiz.html">QUIZ</a>
                     </li>
-                    <li><a href="pages/aboutme.html">CONNECT ME</a></li>
+                    <li><a href="../pages/contact.html">CONTACT ME</a></li>
+                    <li><a href="../pages/about.html">ABOUT ME</a></li>
                 </ul>
+                <button id="dark-mode-toggle" class="dark-mode-toggle">
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
+                </button>
                 <div class="icon" onclick="toggleMenu()">☰</div>
             </nav>
         </header>
@@ -119,6 +197,12 @@
                     x.style.display = "flex";
                 }
             }
+
+            const darkModeToggle = document.getElementById("dark-mode-toggle");
+            darkModeToggle.addEventListener("click", () => {
+                document.body.classList.toggle("dark-mode");
+                darkModeToggle.classList.toggle("dark-mode");
+            });
         </script>
     </body>
 </html>
