Added: GDG mangalore event blog

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
             VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast
         </title>
         <link rel="stylesheet" href="css/styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -160,7 +166,16 @@
                     <span class="tag">Weather App</span>
                     <span class="tag">Website</span>
                 </label>
-
+                <h1>Recent Activities</h1>
+                <label>
+                    <a href="blogs/event/gdg-mangalore-2024.html">
+                        GDG Mangalore 2024: AI on Google Cloud Insights
+                    </a>
+                    <span class="tag">GDG</span>
+                    <span class="tag">Mangalore</span>
+                    <span class="tag">Google Cloud</span>
+                    <span class="tag">Event</span>
+                </label>
                 <h1>Currently working</h1>
                 <label>
                     <a
@@ -239,11 +254,9 @@
                 <div class="footer-section">
                     <h3>About</h3>
                     <p>
-                        <b>Sheikh Vazid Ahmed</b> is a versatile DevOps Engineer
-                        and Cloud Solution Architect with over 6+ years of
-                        experience in designing and implementing robust,
-                        scalable cloud architectures across GCP, AWS, and Azure
-                        platforms.
+                        Sheikh Vazid Ahmed is a skilled DevOps Engineer and
+                        Cloud Architect with 6+ years of experience in GCP, AWS,
+                        and Azure.
                     </p>
                 </div>
                 <div class="footer-section">
