--- a/pages/quiz.html
+++ b/pages/quiz.html
@@ -6,6 +6,12 @@
         <title>VAZID - Quiz</title>
         <link rel="stylesheet" href="../css/styles.css" />
         <link rel="stylesheet" href="../css/quiz.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            rel="stylesheet"
+        />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -71,7 +77,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="../index.html">
                         <!-- Light Mode Logo -->
                         <img
                             src="../images/light-logo.png"
@@ -88,7 +94,7 @@
                 </div>
                 <ul class="nav-links">
                     <li>
-                        <a href="pages/project.html">CURRENT PROJECT</a>
+                        <a href="../pages/project.html">CURRENT PROJECT</a>
                     </li>
 
                     <li class="dropdown">
@@ -156,8 +162,9 @@
                 <div class="footer-section">
                     <h3>About VAZID</h3>
                     <p>
-                        VAZID is a Freelance DevOps engineer, Web developer, Web
-                        designer, and data engineer.
+                        Sheikh Vazid Ahmed is a skilled DevOps Engineer and
+                        Cloud Architect with 6+ years of experience in GCP, AWS,
+                        and Azure.
                     </p>
                 </div>
                 <div class="footer-section">
