--- a/blogs/event/gdg-mangalore-2024.html
+++ b/blogs/event/gdg-mangalore-2024.html
@@ -153,7 +153,7 @@
                     </li>
                     <li><a href="../../pages/quiz.html">QUIZ</a></li>
                     <li><a href="../../pages/contact.html">CONTACT ME</a></li>
-                    <li><a href="../../pages/about.html">ABOUT ME</a></li>
+                    <li><a href="../../pages/about-me.html">ABOUT ME</a></li>
                 </ul>
                 <button id="dark-mode-toggle" class="dark-mode-toggle">
                     <i class="fas fa-sun"></i>
@@ -174,7 +174,7 @@
                             >Posted on: September 22, 2024</span
                         >
                         <span class="blog-author"
-                            ><a href="../../pages/about.html"
+                            ><a href="../../pages/about-me.html"
                                 >By: Sheikh Vazid Ahmed</a
                             ></span
                         >
@@ -387,19 +387,19 @@
                     <div class="blog-share">
                         Share this post:
                         <a
-                            href="#"
+                            href="https://www.linkedin.com/sharing/share-offsite/?url=YOUR_URL"
                             class="share-icon"
                             aria-label="Share on LinkedIn"
                             ><i class="fab fa-linkedin"></i
                         ></a>
                         <a
-                            href="#"
+                            href="https://twitter.com/intent/tweet?url=YOUR_URL&text=YOUR_TEXT"
                             class="share-icon"
                             aria-label="Share on Twitter"
                             ><i class="fab fa-twitter"></i
                         ></a>
                         <a
-                            href="#"
+                            href="https://www.facebook.com/sharer/sharer.php?u=YOUR_URL"
                             class="share-icon"
                             aria-label="Share on Facebook"
                             ><i class="fab fa-facebook"></i
@@ -415,42 +415,49 @@
                     <h3>About</h3>
                     <p>
                         Sheikh Vazid Ahmed is a skilled DevOps Engineer and
-                        Cloud Architect with 6+ years of experience in GCP, AWS,
-                        and Azure.
+                        Cloud Architect proficient in GCP, AWS, and Azure.
                     </p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="../../index.html">Home</a></li>
-                        <li><a href="#">Articles</a></li>
-                        <li><a href="#">Categories</a></li>
-                        <li><a href="../../pages/contact.html">Contact</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../pages/project.html">Project</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="../pages/contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h3>Contact Us</h3>
-                    <p>Email: sheikh.vazid.ahmed@gmail.com</p>
-                    <p>Current Location: Mangalore, Karnataka</p>
+                    <h3>Contact Me</h3>
+                    <p><strong>Email:</strong> sheikh.vazid.ahmed@gmail.com</p>
+                    <p>
+                        <strong>Current Location:</strong> Mangalore, Karnataka
+                    </p>
                 </div>
             </div>
             <div class="footer-bottom">
                 <div class="social-icons">
-                    <a href="#" aria-label="Facebook"
+                    <a
+                        href="https://www.facebook.com/vazid009"
+                        aria-label="Facebook"
                         ><i class="fab fa-facebook"></i
                     ></a>
-                    <a href="#" aria-label="Twitter"
-                        ><i class="fab fa-twitter"></i
+                    <a href="https://x.com/sudovazid" aria-label="x"
+                        ><i class="fab fa-x"></i
                     ></a>
-                    <a href="#" aria-label="Instagram"
+                    <a
+                        href="https://www.instagram.com/sudovazid/"
+                        aria-label="Instagram"
                         ><i class="fab fa-instagram"></i
                     ></a>
-                    <a href="#" aria-label="LinkedIn"
+                    <a
+                        href="https://www.linkedin.com/in/vazid/"
+                        aria-label="LinkedIn"
                         ><i class="fab fa-linkedin"></i
                     ></a>
                 </div>
                 <p>&copy; 2024 VAZID. All rights reserved.</p>
-                <p>Designed by VAZID</p>
+                <p>Designed by <a href="../pages/about-me.html">Me</a></p>
             </div>
         </footer>
 
