--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -17,31 +17,31 @@
         />
         <link
             rel="icon"
-            href="images/favicon-16x16.png"
+            href="../images/favicon-16x16.png"
             sizes="16x16"
             type="image/png"
         />
         <link
             rel="icon"
-            href="images/favicon-16x16.png"
+            href="../images/favicon-16x16.png"
             sizes="32x32"
             type="image/png"
         />
         <link
             rel="icon"
-            href="images/favicon-32x32.png"
+            href="../images/favicon-32x32.png"
             sizes="48x48"
             type="image/png"
         />
         <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
         <link
             rel="android-chrome-icon"
-            href="images/android-chrome-192x192.png"
+            href="../images/android-chrome-192x192.png"
         />
         <link
             rel="android-chrome-icon"
-            href="images/android-chrome-512x512.png"
+            href="../images/android-chrome-512x512.png"
         />
     </head>
     <body>
@@ -212,34 +212,49 @@
                     <h3>About</h3>
                     <p>
                         Sheikh Vazid Ahmed is a skilled DevOps Engineer and
-                        Cloud Architect with 6+ years of experience in GCP, AWS,
-                        and Azure.
+                        Cloud Architect proficient in GCP, AWS, and Azure.
                     </p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Articles</a></li>
-                        <li><a href="#">Categories</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../pages/project.html">Project</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="../pages/contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h3>Contact Us</h3>
-                    <p>Email: sheikh.vazid.ahmed@gmail.com</p>
-                    <p>Current Location: Mangalore, Karnataka</p>
+                    <h3>Contact Me</h3>
+                    <p><strong>Email:</strong> sheikh.vazid.ahmed@gmail.com</p>
+                    <p>
+                        <strong>Current Location:</strong> Mangalore, Karnataka
+                    </p>
                 </div>
             </div>
             <div class="footer-bottom">
                 <div class="social-icons">
-                    <a href="#" aria-label="Facebook"></a>
-                    <a href="#" aria-label="Twitter"></a>
-                    <a href="#" aria-label="Instagram"></a>
-                    <a href="#" aria-label="LinkedIn"></a>
+                    <a
+                        href="https://www.facebook.com/vazid009"
+                        aria-label="Facebook"
+                        ><i class="fab fa-facebook"></i
+                    ></a>
+                    <a href="https://x.com/sudovazid" aria-label="x"
+                        ><i class="fab fa-x"></i
+                    ></a>
+                    <a
+                        href="https://www.instagram.com/sudovazid/"
+                        aria-label="Instagram"
+                        ><i class="fab fa-instagram"></i
+                    ></a>
+                    <a
+                        href="https://www.linkedin.com/in/vazid/"
+                        aria-label="LinkedIn"
+                        ><i class="fab fa-linkedin"></i
+                    ></a>
                 </div>
-                <p>© 2024 VAZID. All rights reserved.</p>
-                <p>Designed by VAZID</p>
+                <p>&copy; 2024 VAZID. All rights reserved.</p>
+                <p>Designed by <a href="../pages/about-me.html">Me</a></p>
             </div>
         </footer>
 
