--- a/pages/contact.html
+++ b/pages/contact.html
@@ -84,7 +84,7 @@
                         <a href="../pages/quiz.html">QUIZ</a>
                     </li>
                     <li><a href="../pages/contact.html">CONTACT ME</a></li>
-                    <li><a href="../pages/about.html">ABOUT ME</a></li>
+                    <li><a href="../pages/about-me.html">ABOUT ME</a></li>
                 </ul>
                 <button id="dark-mode-toggle" class="dark-mode-toggle">
                     <i class="fas fa-sun"></i>
@@ -203,41 +203,70 @@
         <footer>
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>About VAZID</h3>
+                    <h3>About</h3>
                     <p>
                         Sheikh Vazid Ahmed is a skilled DevOps Engineer and
-                        Cloud Architect with 6+ years of experience in GCP, AWS,
-                        and Azure.
+                        Cloud Architect proficient in GCP, AWS, and Azure.
                     </p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Articles</a></li>
-                        <li><a href="#">Categories</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../pages/project.html">Project</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="../pages/contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h3>Contact Us</h3>
-                    <p>Email: info@vazid.com</p>
-                    <p>Phone: (123) 456-7890</p>
-                    <p>Address: 123 Tech Street, Digital City</p>
+                    <h3>Contact Me</h3>
+                    <p><strong>Email:</strong> sheikh.vazid.ahmed@gmail.com</p>
+                    <p>
+                        <strong>Current Location:</strong> Mangalore, Karnataka
+                    </p>
                 </div>
             </div>
             <div class="footer-bottom">
                 <div class="social-icons">
-                    <a href="#" aria-label="Facebook"></a>
-                    <a href="#" aria-label="Twitter"></a>
-                    <a href="#" aria-label="Instagram"></a>
-                    <a href="#" aria-label="LinkedIn"></a>
+                    <a
+                        href="https://www.facebook.com/vazid009"
+                        aria-label="Facebook"
+                        ><i class="fab fa-facebook"></i
+                    ></a>
+                    <a href="https://x.com/sudovazid" aria-label="x"
+                        ><i class="fab fa-x"></i
+                    ></a>
+                    <a
+                        href="https://www.instagram.com/sudovazid/"
+                        aria-label="Instagram"
+                        ><i class="fab fa-instagram"></i
+                    ></a>
+                    <a
+                        href="https://www.linkedin.com/in/vazid/"
+                        aria-label="LinkedIn"
+                        ><i class="fab fa-linkedin"></i
+                    ></a>
                 </div>
-                <p>© 2024 VAZID. All rights reserved.</p>
-                <p>Designed by VAZID</p>
+                <p>&copy; 2024 VAZID. All rights reserved.</p>
+                <p>Designed by <a href="../pages/about-me.html">Me</a></p>
             </div>
         </footer>
 
-        <script src="../js/scripts.js"></script>
+        <script>
+            function toggleMenu() {
+                var x = document.querySelector(".nav-links");
+                if (x.style.display === "flex") {
+                    x.style.display = "none";
+                } else {
+                    x.style.display = "flex";
+                }
+            }
+
+            const darkModeToggle = document.getElementById("dark-mode-toggle");
+            darkModeToggle.addEventListener("click", () => {
+                document.body.classList.toggle("dark-mode");
+                darkModeToggle.classList.toggle("dark-mode");
+            });
+        </script>
     </body>
 </html>
