--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
             VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast
         </title>
         <link rel="stylesheet" href="css/styles.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-            rel="stylesheet"
-        />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
+        <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Noticia+Text:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -50,7 +47,7 @@
                 "@context": "https://schema.org",
                 "@type": "Person",
                 "name": "Sheikh Vazid Ahmed",
-                "jobTitle": "DevOps Engineer, MLOps & Cloud Solution Architect",
+                "jobTitle": "Cloud Solutions Architect & MLOps Innovator",
                 "url": "https://vazid.site",
                 "sameAs": [
                     "https://www.linkedin.com/in/vazid",
@@ -127,31 +124,25 @@
                 <div class="hero-content">
                     <h1>Sheikh Vazid Ahmed</h1>
                     <p class="tagline">
-                        DevOps Engineer, MLOps & Cloud Solution Architect
+                        Cloud Solutions Architect, Devops Experts & MLOps Innovator
                     </p>
                     <p class="intro">
-                        With over 6 years of experience, I specialize in
-                        designing and implementing robust, scalable cloud
-                        architectures across
-                        <strong>GCP, AWS, and Azure platforms</strong>. I'm
-                        passionate about optimizing workflows, automating
-                        processes, and delivering high-performance solutions.
+                        Transforming Complex Infrastructures into High-Performance, Scalable Cloud Ecosystems
                     </p>
                     <ul class="key-skills">
-                        <li>Cloud Architecture</li>
-                        <li>CI/CD Pipelines</li>
-                        <li>Data Science & MLOps</li>
-                        <li>Infrastructure as Code</li>
-                        <li>Containerization & Orchestration</li>
+                        <li>🚀 Cloud Architecture Specialist (AWS, GCP, Azure)</li>
+                        <li>🔧 DevOps & MLOps Engineering</li>
+                        <li>🌐 Infrastructure as Code Expert</li>
                     </ul>
                     <div class="cta-buttons">
-                        <a href="#projects" class="cta-button primary"
-                            >View My Work</a
-                        >
+                        
                         <a
                             href="pages/contact.html"
                             class="cta-button secondary"
                             >Hire Me</a
+                        >
+                        <a href="#projects" class="cta-button primary"
+                            >View My Work</a
                         >
                     </div>
                 </div>
