--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
             VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast
         </title>
         <link rel="stylesheet" href="css/styles.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>  
-        <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Noticia+Text:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+            rel="stylesheet"
+        />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -124,18 +127,22 @@
                 <div class="hero-content">
                     <h1>Sheikh Vazid Ahmed</h1>
                     <p class="tagline">
-                        Cloud Solutions Architect, Devops Experts & MLOps Innovator
+                        Cloud Solutions Architect, Devops Experts & MLOps
+                        Innovator
                     </p>
                     <p class="intro">
-                        Transforming Complex Infrastructures into High-Performance, Scalable Cloud Ecosystems
+                        Transforming Complex Infrastructures into
+                        High-Performance, Scalable Cloud Ecosystems
                     </p>
                     <ul class="key-skills">
-                        <li>🚀 Cloud Architecture Specialist (AWS, GCP, Azure)</li>
+                        <li>
+                            🚀 Cloud Architecture Specialist (AWS, GCP, Azure)
+                        </li>
                         <li>🔧 DevOps & MLOps Engineering</li>
                         <li>🌐 Infrastructure as Code Expert</li>
+                        <li>🤖 Data solution experts</li>
                     </ul>
                     <div class="cta-buttons">
-                        
                         <a
                             href="pages/contact.html"
                             class="cta-button secondary"
@@ -272,6 +279,11 @@
                         href="https://www.facebook.com/vazid009"
                         aria-label="Facebook"
                         ><i class="fab fa-facebook"></i
+                    ></a>
+                    <a
+                        href="https://www.github.com/sudovazid"
+                        aria-label="GitHub"
+                        ><i class="fab fa-github"></i
                     ></a>
                     <a href="https://x.com/sudovazid" aria-label="x"
                         ><i class="fab fa-x"></i
